# Grace

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/quick_start/: main.cpp
benchmarks/: CMakeLists.txt
benchmarks/first_benchmark/: main.cpp
lib/: CMakeLists.txt
lib/cmake/: GraceConfig.cmake.in
lib/include/Grace/: Grace.hpp  RK4.hpp  defaults.hpp  functional.hpp  runtime.hpp  systems.hpp
lib/include/Grace/integration/: RK4_no_policies.hpp  defaults.hpp  factories.hpp  functional.hpp  integration.hpp  methods.hpp
lib/src/: Grace.cpp
tests/: CMakeLists.txt
tests/include/: factories.hpp  fixtures.hpp  generators.hpp  integrator_precision_tests.hpp  preferenced.hpp
tests/src/unit/: integrator_basic_tests.cpp  integrator_precision_tests.cpp
